# fm-index

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  todo.txt
include/: bwt_isfm.hpp  fm_index.hpp  saca_k.hpp  sais.hpp
src/: build_index.cpp  build_sa.cpp
unit_test/: bwt_isfm_test.cpp  fm_index_test.cpp  integration_test.cpp  saca_k_test.cpp  sais_test.cpp
unit_test/data/: three-level-seq.txt
